@@ -1,17 +1,0 @@
-# $NetBSD: Makefile,v 1.2 2022/01/04 20:53:37 wiz Exp $
-
-DISTNAME=	retry_decorator-1.1.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
-CATEGORIES=	devel
-MASTER_SITES=	${MASTER_SITE_PYPI:=r/retry_decorator/}
-
-MAINTAINER=	bsiegert@NetBSD.org
-HOMEPAGE=	https://github.com/pnpnpn/retry-decorator
-COMMENT=	Retry decorator for Python
-LICENSE=	mit
-
-USE_LANGUAGES=	# none
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
