@@ -1,11 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2018/01/25 19:03:04 bsiegert Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/retry_decorator/__init__.py
-${PYSITELIB}/retry_decorator/__init__.pyo
-${PYSITELIB}/retry_decorator/__init__.pyc
-${PYSITELIB}/retry_decorator/retry_decorator.pyo
-${PYSITELIB}/retry_decorator/retry_decorator.pyc
-${PYSITELIB}/retry_decorator/retry_decorator.py
